Fix flash being hidden by new eui banner

--- a/src/components/Flash.scss
+++ b/src/components/Flash.scss
@@ -22,7 +22,7 @@ div.flash {
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 6;
+    z-index: 1001;
     opacity: 0.9;
 
     transition: top 150ms ease-in-out;
